# rphp

./: Cargo.toml  README.md  rust-toolchain.toml
crates/rphp-ast/: Cargo.toml
crates/rphp-ast/src/: lib.rs
crates/rphp-bytecode/: Cargo.toml
crates/rphp-bytecode/src/: lib.rs
crates/rphp-compiler/: Cargo.toml
crates/rphp-compiler/src/: lib.rs
crates/rphp-diagnostics/: Cargo.toml
crates/rphp-diagnostics/src/: lib.rs
crates/rphp-intern/: Cargo.toml
crates/rphp-intern/src/: lib.rs
crates/rphp-lexer/: Cargo.toml
crates/rphp-lexer/src/: lib.rs
crates/rphp-parser/: Cargo.toml
crates/rphp-parser/src/: lib.rs
crates/rphp-runtime/: Cargo.toml
crates/rphp-runtime/src/: lib.rs
crates/rphp-sapi-cli/: Cargo.toml
crates/rphp-sapi-cli/src/: lib.rs
crates/rphp-sapi-cli/tests/: differential.rs  end_to_end.rs
crates/rphp-source/: Cargo.toml
crates/rphp-source/src/: lib.rs
crates/rphp-span/: Cargo.toml
crates/rphp-span/src/: lib.rs
crates/rphp-stdlib/: COVERAGE.md  Cargo.toml
crates/rphp-stdlib/src/: arrays.rs  ctype.rs  funcs.rs  hash.rs  json.rs  lib.rs  math.rs  output.rs  pcre.rs  strings.rs  types.rs
crates/rphp-value/: Cargo.toml
crates/rphp-value/src/: array.rs  closure.rs  lib.rs  object.rs
examples/: m0.php  m1-strings.php  m2-arrays.php  m3-stdlib.php
examples/tier-a/: README.md  array.php  byref.php  callables.php  closures.php  ctype.php  dynamic-calls.php  hash.php  inheritance.php  json.php  math.php  objects.php  pcre.php  string.php
specs/base/: 00-overview.md  01-frontend.md  02-value-model.md  03-heap-types.md  04-memory-gc.md  05-bytecode-isa.md  06-interpreter.md  07-jit.md  08-stdlib-ext.md  09-runtime-sapi.md  10-testing.md  base-idea.md  decisions.md
tools/rphp/: Cargo.toml
tools/rphp/src/: main.rs
