[package]
name = "rphp-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rphp-span.workspace = true
rphp-intern.workspace = true
rphp-diagnostics.workspace = true
rphp-ast.workspace = true
rphp-bytecode.workspace = true
rphp-value.workspace = true
