[package]
name = "rphp-sapi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rphp-span.workspace = true
rphp-source.workspace = true
rphp-intern.workspace = true
rphp-diagnostics.workspace = true
rphp-lexer.workspace = true
rphp-ast.workspace = true
rphp-bytecode.workspace = true
rphp-parser.workspace = true
rphp-compiler.workspace = true
rphp-runtime.workspace = true
