[package]
name = "rphp-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rphp-value.workspace = true

# hash extension — pure-Rust digests.
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1.4"

# pcre extension — PCRE2 (the engine php-src links), bundled by pcre2-sys.
pcre2 = "0.2"
